test/files/neg/t2458c.check
test.scala:8: error: reference to f is ambiguous;
it is both defined in package object p and imported subsequently by
import q.X._
      f() + g()
      ^
test.scala:8: error: reference to g is ambiguous;
it is both defined in package object p and imported subsequently by
import q.X._
      f() + g()
            ^
2 errors
